# telco-customer-churn-prediction

./: .gitignore  main.py  mlflow.db  pyproject.toml  requirements.txt
notebooks/: eda.ipynb
scripts/: run_pipeline.py  test_pipeline_phase_1_preprocessing.py  test_pipeline_phase_2_data_features.py  test_pipeline_phase_3_modelling.py
src/app/: app.py
src/app/static/: index.html
src/data/: load_data.py  preprocess.py
src/features/: build_features.py
src/models/: train.py  tune.py
src/utils/: validate_data.py
