[project]
name = "telco-customer-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-expectations==0.18.19",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.14.0",
    "optuna>=4.7.0",
    "pandas==2.2.3",
    "posthog>=7.9.7",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]
